fix: faster cdn Squashed commit of the following:
commit 952e5b5eb902146b62e0a65fc362cee8e421fd51
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 10:34:01 2023 +0000

    replace with faster cdn

commit 169236b8e55e81c368bcb7ff2536df9d79fa557f
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 10:31:59 2023 +0000

    fix waline link error

commit 60045a3b2952f21dd36d55b5c442d8ef8ab25148
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 09:52:55 2023 +0000

    replace with faster cdn and local file

--- a/templates/modules/layout.html
+++ b/templates/modules/layout.html
@@ -41,8 +41,7 @@
 
 </div>
 
-<script src=https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js
-        integrity="sha256-awcR2jno4kI5X0zL8ex0vi2z+KMkF24hUW8WePSA9HM=" crossorigin=anonymous>
+<script th:src="@{/assets/js/vibrant.min.js}">
 </script>
 <script type=text/javascript th:src="@{/assets/js/main.js}" defer>
 </script>
