--- a/templates/modules/widgets/right-sideWidgets.html
+++ b/templates/modules/widgets/right-sideWidgets.html
@@ -163,7 +163,7 @@
   </div>
   <script type="module">
     const walineUrl = "[[${theme.config.article.walineUrl}]]";
-    import { RecentComments } from 'https://cdn.jsdelivr.net/npm/@waline/client/dist/waline.mjs';
+    import { RecentComments } from "https://unpkg.com/@waline/client/dist/waline.mjs";
     RecentComments({
 
       serverURL: walineUrl,
