fix: tocbot error Squashed commit of the following:
commit d4df51eae830d39c3076db3ebcfcf37d805bdc8b
Author: longjuan <769022681@qq.com>
Date:   Thu Feb 2 03:33:04 2023 +0000

    fix tocbot error

commit e455381466282b245112b77d08f9e24657c265cd
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 15:09:23 2023 +0000

    fix markdown tocbot error

commit dd8a0d300f206a7700190da1afb645822be89931
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 12:39:49 2023 +0000

    import tocbot

commit 1c2adc82c5c1896c0cc595199035d0ff1fea7f37
Author: longjuan <769022681@qq.com>
Date:   Wed Feb 1 11:24:33 2023 +0000

    remove tocbot.min.js import

--- a/templates/modules/layout.html
+++ b/templates/modules/layout.html
@@ -55,16 +55,14 @@
     })()
 </script>
 <script>
-    document.addEventListener("DOMContentLoaded", function(){
-        var section = document.querySelector("#article-content");
-        var headings = section.querySelectorAll("h1, h2, h3, h4, h5, h6");
-        for(var i = 0; i < headings.length; i++){
-            var heading = headings[i];
-            if(!heading.id){
-                heading.id = "title-" + heading.textContent.replace(/\s+/g, '-');
-            }
+    const section = document.querySelector("#article-content");
+    const headings = section.querySelectorAll("h1, h2, h3, h4, h5, h6");
+    for(let i = 0; i < headings.length; i++){
+        const heading = headings[i];
+        if(!heading.id){
+            heading.id = "title" + i + "-" + heading.textContent.replace(/\s+/g, '-');
         }
-    });
+    }
 
 </script>
 <script type="text/javascript" th:src="@{/assets/js/tocbot.min.js}"></script>
