--- a/templates/modules/layout.html
+++ b/templates/modules/layout.html
@@ -56,11 +56,13 @@
 </script>
 <script>
     const section = document.querySelector("#article-content");
-    const headings = section.querySelectorAll("h1, h2, h3, h4, h5, h6");
-    for(let i = 0; i < headings.length; i++){
-        const heading = headings[i];
-        if(!heading.id){
-            heading.id = "title" + i + "-" + heading.textContent.replace(/\s+/g, '-');
+    if (section) {
+        const headings = section.querySelectorAll("h1, h2, h3, h4, h5, h6");
+        for(let i = 0; i < headings.length; i++){
+            const heading = headings[i];
+            if(!heading.id){
+                heading.id = "title" + i + "-" + heading.textContent.replace(/\s+/g, '-');
+            }
         }
     }
 
