All areas of the search component are clickable

--- a/templates/modules/widgets/right-sideWidgets.html
+++ b/templates/modules/widgets/right-sideWidgets.html
@@ -20,7 +20,7 @@
   <br>
   <br>
 <form action=search/search.html class="search-form widget">
-  <p>
+  <p onclick="javascript:SearchWidget.open();return false;">
     <label>
       搜索
     </label>
