archives use anchor instead of path

--- a/templates/modules/widgets/right-sideWidgets.html
+++ b/templates/modules/widgets/right-sideWidgets.html
@@ -73,7 +73,7 @@
     <th:block th:each="archive : ${archives.items}">
 
       <div class=archives-year>
-        <a th:href="@{'/archives/'+${archive.year}}">
+        <a th:href="@{'/archives#'+${archive.year}}">
                 <span class=year>
                   [[${archive.year}]]
                 </span>
