--- a/src/styles/partials/article.scss
+++ b/src/styles/partials/article.scss
@@ -12,7 +12,54 @@
         border-radius: var(--card-border-radius);
         overflow: hidden;
 
-        transition: box-shadow 0.3s ease;
+        transition: var(--vs-transition-ease);
+
+        &.has-image {
+            .article-image-after-placeholder {
+                width: 100%;
+                height: 100px;
+            }
+
+            .article-details {
+                position: absolute;
+                bottom: 0;
+                background: rgba(255,255,255, .5);
+                backdrop-filter: saturate(180%) blur(20px);
+            }
+
+            .article-header {
+                position: relative;
+
+                .article-image {
+                    img {
+                        transition: var(--vs-transition-ease);
+                        min-height: 180px;
+                    }
+                }
+
+                &:hover {
+                    .article-subtitle {
+                        max-height: 100px;
+                        text-overflow: ellipsis;
+                    }
+
+                    .article-image {
+                        img {
+                            transform: scale(0.85);
+                            transform-origin: top center;
+                        }
+                    }
+                }
+
+            }
+
+            .article-subtitle {
+                max-height: 0;
+                overflow: hidden;
+                transition: max-height 0.5s ease;
+            }
+
+        }
 
         &:hover {
             box-shadow: var(--shadow-l2);
@@ -21,17 +68,21 @@
         .article-image {
             img {
                 width: 100%;
-                height: 150px;
+                max-height: 300px;
                 object-fit: cover;
 
                 @include respond(md) {
-                    height: 200px;
+                    max-height: 400px;
                 }
 
                 @include respond(xl) {
-                    height: 250px;
+                    max-height: 450px;
                 }
             }
+        }
+
+        .article-header {
+            cursor: pointer;
         }
 
         @for $i from 1 through length($defaultTagBackgrounds) {
@@ -51,6 +102,8 @@
     justify-content: center;
     padding: var(--card-padding);
     gap: 15px;
+    width: 100%;
+    border-radius: var(--card-border-radius);
 }
 
 .article-title {
@@ -78,9 +131,10 @@
     color: var(--card-text-color-secondary);
     line-height: 1.5;
     margin: 0;
-    font-size: 1.75rem;
+    font-size: 1rem;
+    word-break: break-all;
     @include respond(xl) {
-        font-size: 2rem;
+        font-size: 1.3rem;
     }
 }
 
