--- a/src/styles/partials/layout/search.scss
+++ b/src/styles/partials/layout/search.scss
@@ -31,7 +31,7 @@
 
     input {
         padding: 40px 20px 20px;
-        border-radius: var(--card-border-radius);
+        border-radius: var(--search-border-radius);
         background-color: var(--card-background);
         box-shadow: var(--shadow-l1);
         color: var(--card-text-color-main);
