--- a/templates/modules/common/comment.html
+++ b/templates/modules/common/comment.html
@@ -47,7 +47,7 @@
         <script th:if="${theme.config.base.waline.waline_setting == 'custom'}"
                 th:utext="${theme.config.base.waline.waline_custom}"></script>
     </th:block>
-    <th:block th:fragment="default(name,kind)">
+    <th:block th:fragment="default(name,kind)" th:if="${site.comment.enable}">
         <div class="article-comment">
             <div class="comment-head">
                 <div class="comment-title">
