修复搜索页再次搜索跳转到不存在的页面的问题

--- a/templates/page_search.html
+++ b/templates/page_search.html
@@ -6,7 +6,7 @@
         <th:block th:replace="~{modules/common/left-sidebar :: left-sidebar}"></th:block>
 
         <main class="main full-width">
-            <form action="search.html" class="search-form">
+            <form action="search" class="search-form">
                 <p>
                     <label>[[#{theme.search}]]</label>
                     <input name="keyword" th:placeholder="#{theme.search_input}">
